<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/divider"
    android:orientation="vertical"
    android:showDividers="middle|end"
    tools:context="com.renhuikeji.wanlb.wanlibao.activity.PersonalDataActivity">

    <include layout="@layout/comman_white_topbar" />

    <RelativeLayout
        android:id="@+id/rel_userportrait"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:background="@drawable/item_product_list_sl"
        android:paddingLeft="@dimen/size_15dp"
        android:paddingRight="@dimen/size_15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/my_headportrait"
            android:textColor="@color/all_text_color"
            android:textSize="16sp" />

        <com.renhuikeji.wanlb.wanlibao.views.CircleImageView
            android:id="@+id/user_touxiang"
            android:layout_width="@dimen/size_40dp"
            android:layout_height="@dimen/size_40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/icon_yh" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_user_nickname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:background="@drawable/item_product_list_sl"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/size_15dp"
        android:paddingRight="@dimen/size_15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_nickname"
            android:textColor="@color/all_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/user_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:maxLength="20"
            android:maxLines="1"
            android:text="****"
            android:textColor="@color/classify_gray"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_userphone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:background="@drawable/item_product_list_sl"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/size_15dp"
        android:paddingRight="@dimen/size_15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_phone"
            android:textColor="@color/all_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/user_phonenum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:drawablePadding="@dimen/size_5dp"
            android:maxLines="1"
            android:textColor="@color/grey_text"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:background="@drawable/item_product_list_sl"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/size_15dp"
        android:paddingRight="@dimen/size_15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/update_password"
            android:textColor="@color/all_text_color"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:src="@mipmap/right_jiantou" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_tixian"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:background="@drawable/item_product_list_sl"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/size_15dp"
        android:paddingRight="@dimen/size_15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="提现"
            android:textColor="@color/all_text_color"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:src="@mipmap/right_jiantou" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_clearcache"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:background="@drawable/item_product_list_sl"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/size_15dp"
        android:paddingRight="@dimen/size_15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_cache"
            android:textColor="@color/all_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_cache_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="1M"
            android:textColor="@color/classify_gray"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_version"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:background="@drawable/item_product_list_sl"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/size_15dp"
        android:paddingRight="@dimen/size_15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now_version"
            android:textColor="@color/all_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="1.0"
            android:textColor="@color/classify_gray"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_loginout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:background="@drawable/item_product_list_sl"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/size_15dp"
        android:paddingRight="@dimen/size_15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/logout_test"
            android:textColor="@color/all_text_color"
            android:textSize="16sp" />
    </RelativeLayout>

</LinearLayout>
