<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/comman_topbar"/>

    <com.renhuikeji.wanlb.wanlibao.views.MyGridView
        android:id="@+id/mgv_rebate_shop"
        android:verticalSpacing="@dimen/size_5dp"
        android:horizontalSpacing="@dimen/size_5dp"
        android:background="#f3f3f3"
        android:numColumns="4"
        android:layout_marginTop="@dimen/size_5dp"
        android:padding="@dimen/size_5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:paddingTop="@dimen/size_10dp"
        android:paddingLeft="@dimen/size_10dp"
        android:paddingBottom="@dimen/size_10dp"
        android:paddingRight="24dp"
        android:layout_margin="@dimen/size_5dp"
        android:background="@drawable/shape_btn_grey_rectangle_5corner"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="省钱秘籍："
            android:textColor="@color/all_text_color"
            android:textSize="@dimen/large_textsize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textScaleX="1.1"
                android:lineSpacingMultiplier="1.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1、"/>

            <TextView
                android:textScaleX="1.1"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/rebate_shop_tip1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textScaleX="1.1"
                android:lineSpacingMultiplier="1.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2、"/>

            <TextView
                android:textScaleX="1.1"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/rabate_shop_tip2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textScaleX="1.1"
                android:lineSpacingMultiplier="1.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3、"/>
            <TextView
                android:textScaleX="1.1"
                android:lineSpacingMultiplier="1.1"
                android:textColor="@color/red_text"
                android:text="@string/rebate_shop_tip3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textScaleX="1.1"
                android:lineSpacingMultiplier="1.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4、"/>

        <TextView
            android:textScaleX="1.1"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/rebate_shop_tip4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>
